refactor : collect(Collectors.toList()) -> toList()